switch to walkdir and support recursion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ version = "0.1.0"
 [dependencies]
 clap = "2.20.3"
 error-chain = "0.9.0"
-regex = "0.2.1"
-
 maplit = "0.1.4"
+regex = "0.2.1"
+walkdir = "1.0.7"
